--- a/openGl/openGl.vcxproj.filters
+++ b/openGl/openGl.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="shadersC.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="triangle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imGuiUi.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="rendering.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -84,6 +90,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="shaders.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="triangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="imGuiUi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rendering.cpp">
