added simple readme

--- a/openGl/openGl.vcxproj
+++ b/openGl/openGl.vcxproj
@@ -188,6 +188,9 @@
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="imGuiUi.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.MD" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
