--- a/openGl/openGl.vcxproj
+++ b/openGl/openGl.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="imGui\imstb_textedit.h" />
     <ClInclude Include="imGui\imstb_truetype.h" />
     <ClInclude Include="lightBase.hpp" />
+    <ClInclude Include="lightPoint.hpp" />
     <ClInclude Include="lightSource.hpp" />
     <ClInclude Include="lightDirectional.hpp" />
     <ClInclude Include="material.hpp" />
@@ -184,6 +185,7 @@
     <ClCompile Include="imGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="imGui\imgui_tables.cpp" />
     <ClCompile Include="imGui\imgui_widgets.cpp" />
+    <ClCompile Include="lightPoint.cpp" />
     <ClCompile Include="lightSource.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="material.cpp" />
