--- a/openGl/openGl.vcxproj.filters
+++ b/openGl/openGl.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClInclude Include="lightDirectional.hpp">
       <Filter>source\objects\light</Filter>
     </ClInclude>
+    <ClInclude Include="lightSpotlight.hpp">
+      <Filter>source\objects\light</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imGui\imgui_tables.cpp">
@@ -172,6 +175,9 @@
       <Filter>source\objects\light</Filter>
     </ClCompile>
     <ClCompile Include="lightPoint.cpp">
+      <Filter>source\objects\light</Filter>
+    </ClCompile>
+    <ClCompile Include="lightSpotlight.cpp">
       <Filter>source\objects\light</Filter>
     </ClCompile>
   </ItemGroup>
