--- a/openGl/openGl.vcxproj
+++ b/openGl/openGl.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="objectShape.hpp" />
     <ClInclude Include="objectList.hpp" />
     <ClInclude Include="rendering.hpp" />
+    <ClInclude Include="scene.hpp" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.hpp" />
     <ClInclude Include="shader.hpp" />
@@ -196,6 +197,7 @@
     <ClCompile Include="objectShape.cpp" />
     <ClCompile Include="objectList.cpp" />
     <ClCompile Include="rendering.cpp" />
+    <ClCompile Include="scene.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="imGuiUi.cpp" />
